start canvas js

--- a/libs/time_bars.html
+++ b/libs/time_bars.html
@@ -39,4 +39,4 @@
 	</script>
 	<script type="text/javascript" src="/assets/script/canvasjs.min.js"></script>
 
-<div id="chartContainer" style="height: 300px; width: 100%;">
+<div id="chartContainer" style="height: 300px; width: 100%;"></div>
